--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "buffer": "^6.0.3",
     "chai": "^4.3.7",
     "circom_tester": "^0.0.19",
+    "circomlib": "^2.0.5",
     "circomlibjs": "^0.1.2",
     "cryo": "^0.0.6",
     "crypto-browserify": "^3.12.0",
